istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: authpractice-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "authpractice.local"
    - "authpractice-prod.local"
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: authpractice-gateway-prod
  namespace: authpractice
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "authpractice-prod.local"
